Use Boolean#valueOf instead of constructor
- The constructor circumvents the cache for Booleans.
- The constructor is deprecated since Java 9.