@@ -154,16 +154,16 @@ public abstract class APMCMethod extends SimulationMethod
 			return new Double(estimate);
 		case -1: // -1=lower bound
 			if (estimate >= theta + approximation)
-				return new Boolean(true);
+				return Boolean.valueOf(true);
 			else if (estimate <= theta - approximation)
-				return new Boolean(false);
+				return Boolean.valueOf(false);
 			else
 				throw new PrismException("Approximation is not precise enough to get a result");
 		case 1: // 1=upper bound
 			if (estimate >= theta + approximation)
-				return new Boolean(false);
+				return Boolean.valueOf(false);
 			else if (estimate <= theta - approximation)
-				return new Boolean(true);
+				return Boolean.valueOf(true);
 			else
 				throw new PrismException("Approximation is not precise enough to get a result");
 		default:
