@@ -288,7 +288,7 @@ public class GUIInitialStatePicker extends javax.swing.JDialog implements KeyLis
 					String bool = initValuesModel.getValue(i).value.toString();
 					if (!(bool.equals("true") || bool.equals("false")))
 						throw new NumberFormatException();
-					parameterValue = new Boolean(bool);
+					parameterValue = Boolean.valueOf(bool);
 				} else if (initValuesModel.getValue(i).type instanceof TypeInt) {
 					parameterValue = Integer.valueOf(initValuesModel.getValue(i).value.toString());
 				} else {
